--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
     "express": "~4.15.2",
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
+    "node-rest-client": "^3.1.0",
+    "promise": "^8.0.1",
     "serve-favicon": "~2.4.2"
   }
 }
