--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "morgan": "~1.8.1",
     "node-rest-client": "^3.1.0",
     "promise": "^8.0.1",
+    "sendbird": "^3.0.41",
     "serve-favicon": "~2.4.2"
   }
 }
