--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "auth0-js": "^8.9.3",
     "bootstrap": "^4.0.0-beta",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "rxjs": "^5.4.3",
     "sendbird": "^3.0.41",
