--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "aframe": "^0.6.1",
     "ar.js": "^1.4.10",
     "auth0-js": "^8.9.3",
     "bootstrap": "^4.0.0-beta",
