--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "moment": "^2.18.1",
     "rxjs": "^5.4.3",
     "sendbird": "^3.0.41",
+    "three": "^0.87.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
