--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "@types/socket.io-client": "^1.4.30",
     "aframe": "^0.6.1",
     "ar.js": "^1.4.10",
     "auth0-js": "^8.9.3",
@@ -30,7 +31,7 @@
     "jquery": "^3.2.1",
     "moment": "^2.18.1",
     "rxjs": "^5.4.3",
-    "sendbird": "^3.0.41",
+    "socket.io-client": "^2.0.3",
     "three": "^0.87.1",
     "zone.js": "^0.8.14"
   },
