--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,7 +33,8 @@
     "rxjs": "^5.4.3",
     "socket.io-client": "^2.0.3",
     "three": "^0.87.1",
-    "zone.js": "^0.8.14"
+    "zone.js": "^0.8.14",
+    "zxing-typescript": "^0.1.2"
   },
   "devDependencies": {
     "@angular/cli": "1.4.2",
