--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,10 @@
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
     "mysql": "^2.14.1",
+    "node-cache": "^4.1.1",
     "node-rest-client": "^3.1.0",
     "promise": "^8.0.1",
+    "randomcolor": "^0.5.3",
     "rxjs": "^5.4.3",
     "serve-favicon": "~2.4.2",
     "socket.io": "^2.0.3"
